fix backend api connectivity
